# pyPrepGDC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  aggreg.py  gparse.py
tests/: conftest.py  test_aggreg.py  test_gparse.py
