[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPrepGDC"
dynamic = ["version"]
description = "Preprocessing for GDC multiomics"
readme = "README.md"
authors = [
    {name = "Hasan Alsharoh", email = "hasanalsharoh@gmail.com"}
]
license = {text = "Apache License (2.0)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.11.9"
dependencies = [
    'pandas==2.3.3',
    'numpy==2.2.6',
    'dask==2024.9.1',
    'pyarrow'
]

[project.urls]
"Homepage" = "https://github.com/hasanalsharoh/SIMPApy"
"Bug Tracker" = "https://github.com/hasanalsharoh/SIMPApy/issues"

[tool.setuptools]
packages = ["SIMPApy"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "pyPrepGDC.__version__"}