[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPrepGDC"
dynamic = ["version"]
description = "Preprocessing for GDC multiomics"
readme = "README.md"
authors = [
    {name = "Hasan Alsharoh", email = "hasanalsharoh@gmail.com"}
]
license = {text = "Apache License (2.0)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.9"
dependencies = [
    'pandas==2.3.3',
    'numpy==2.2.6',
    'dask==2024.9.1',
    'pyarrow',
    'anndata',
    'scipy',
]

[project.urls]
"Homepage" = "https://github.com/hasanalsharoh/pyPrepGDC"
"Bug Tracker" = "https://github.com/hasanalsharoh/pyPrepGDC/issues"

[tool.setuptools]
packages = ["pyPrepGDC"]
include-package-data = false

[tool.setuptools.package-dir]
pyPrepGDC = "src"

[tool.setuptools.dynamic]
version = {attr = "pyPrepGDC.__version__"}